# azure-ai-vision-workshop

./: .env.example  .gitignore  Azure_AI_Vision_Workshop.pptx  DEMO_WALKTHROUGH.md  README.md  analyze_template.py  app.py  commands.md  download_samples.py  generate_ppt.py  presentation.md  pyproject.toml  ~$Azure_AI_Vision_Workshop.pptx
